# AI-Internship

ai-engineering-bootcamp-v2/week-1/: load_env.py  main.py  requirements.txt  serve_stage1.py  serve_stage2.py  serve_stage3.py  serve_stage4.py  test_all_stages.py
ai-engineering-bootcamp/langgraph-multi-agent-systems/: .env.example  README.md  demo1_routing.py  demo2_mcp.py  demo3_full_system.py  pyproject.toml  shipping_agent.py  streamlit_app.py  week3_langgraph_notebook.ipynb
ai-engineering-bootcamp/week1-fastapi-intro/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
