[project]
name = "langgraph-multi-agent-systems"
version = "0.1.0"
description = "Multi-agent AI systems with LangGraph -- routing, MCP, and remote agent demos"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "streamlit>=1.35.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
]
